# cm3

./: .cvsignore  .gitignore  COPYRIGHT-BSD  COPYRIGHT-DEC  COPYRIGHT-INTEL  COPYRIGHT-PURDUE  COPYRIGHT-XEROX  COPYRIGHTS  README  README-new.txt  README-unicode  README-unicode-summary  compat.quake  do-cm3-boot.sh  do-cm3-comm.sh  do-cm3-core.sh  do-cm3-ui.sh  getting-started-windows.txt  m3overrides  pkgmap.sh
.circleci/: config.yml
.github/workflows/: amd64_darwin.yml  amd64_linux.yml  amd64_mingw.yml  amd64_nt.yml  arm64_darwin.yml  buildship-integration.yml  buildship.yml  check-all.yml  check-latest.yml  check-release.yml  extended_test.yml  i386-linux-integration.yml  i386_linux.yml  i386_nt.yml  integration.yml  linux-integration-from-binary.yml  linux-integration-from-bootstrap.yml  m3tests.yml  macos-integration-from-binary.yml  macos-integration-from-bootstrap.yml  make-release.yml  mingw-integration-from-binary.yml  mingw-integration-from-bootstrap.yml  posix-integration-from-bootstrap.yml  win32-integration-from-binary.yml  win64-integration-from-bootstrap.yml  windows-integration-from-binary.yml  windows-integration-from-bootstrap.yml
ESC/: CLAUDE.md  esc-resurrection-report.md
caltech-other/: copyrite.txt
caltech-other/voronoi2/: README
caltech-parser/: .gitignore  COPYRIGHT  Makefile  PkgTags  README  README.cm3  dirsexist.sh  m3overrides  m3subdir.mk
caltech-parser/cit_common/: Makefile  PkgTags
caltech-parser/cit_util/: PkgTags
caltech-parser/drawcontext/: COPYRIGHT  PkgTags
caltech-parser/hack/: PkgTags  bindir.sh
caltech-parser/m3browserhack/: COPYRIGHT  PkgTags  export.sh  pwdname.sh
caltech-parser/m3tmplhack/: PkgTags
caltech-parser/paneman/: COPYRIGHT  PkgTags
caltech-parser/parserlib/: .gitignore  COPYRIGHT  IMPLEMENTATION_GUIDE.md  Makefile  PkgTags  m3overrides
caltech-parser/term/: PkgTags
doc/: PkgDesc  PkgTags  index.html  ship-cm3-www  ship-cm3-www-doc
doc/help/: bib.html  concise-bib.html  getting-started.html  index.html  interfaces.html
doc/notes/: building-old.txt  non-destructive-compiler-testing.txt  porting.txt  todo.txt
doc/reference/: acks.html  apply.html  arithmetic.html  arrays.html  assign.html  authors.html  block.html  boolops.html  builtin.html  calls.html  case.html  constants.html  constexpr.html  construct.html  conventions.html  decls.html  defns.html  designators.html  eval.html  example.html  exceptions.html  exit.html  exprs.html  (+60 more)
docs/: PkgTags  index.html  ship-cm3-www-doc
elego/: DepGraph  PrjDesc  quake.elego  srcs
examples/: README
m3-comm/: cleanup.py
m3-db/: README
m3-scheme/: CLAUDE.md  README
m3-sys/m3cc/gcc/gmp/: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  ansi2knr.c  configure  configure.in  gmp-h.in  gmp-impl.h  longlong.h
m3-sys/m3cc/gcc/gmp/demos/calc/: calclex.c
m3-sys/m3cc/gcc/gmp/doc/: Makefile.am  Makefile.in
m3-sys/m3cc/gcc/gmp/mpn/: Makefile.am  Makefile.in
m3-sys/m3cc/gcc/gmp/mpz/: Makefile.am  Makefile.in
m3-sys/m3cc/gcc/gmp/tests/rand/: findlc.c
m3-sys/m3cc/gcc/mpfr/: AUTHORS  BUGS  ChangeLog  FAQ.html  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  abort_prec_max.c  acinclude.m4  aclocal.m4  acos.c  acosh.c  add.c  add1.c  add1sp.c  add_ui.c  agm.c  ansi2knr.c  asin.c  asinh.c  atan.c  atan2.c  atanh.c  cache.c  cbrt.c  check.c  clear.c  clears.c  cmp.c  cmp2.c  cmp_abs.c  cmp_d.c  cmp_ld.c  cmp_si.c  cmp_ui.c  comparisons.c  configure  (+185 more)
m3-sys/m3cc/gcc/mpfr/tests/: Makefile.am  Makefile.in  cmp_str.c  inp_str.data  memory.c  mpf_compat.c  mpf_compat.h  mpfr-test.h  mpfr_compat.c  reuse.c  rnd_mode.c  tabs.c  tacos.c  tacosh.c  tadd.c  tadd1sp.c  tadd_ui.c  tagm.c  tasin.c  tasinh.c  tatan.c  tatanh.c  tcan_round.c  tcbrt.c  tcheck.c  tcmp.c  tcmp2.c  tcmp_d.c  tcmp_ld.c  tcmp_ui.c  tcmpabs.c  tcomparisons.c  tconst_catalan.c  tconst_euler.c  tconst_log2.c  tconst_pi.c  tcopysign.c  tcos.c  tcosh.c  tcot.c  (+105 more)
m3-sys/m3cc/gcc/texinfo/makeinfo/: Makefile.am  makeinfo.c  makeinfo.h  makeinfo.texi  multi.c
m3-sys/m3cc/gcc/texinfo/util/: Makefile.am  gen-dir-node  install-info.c  texindex.c
m3-sys/m3cc/mpfr-2.4.2/tests/: Makefile.am  Makefile.in  cmp_str.c  memory.c  mpf_compat.c  mpf_compat.h  mpfr-test.h  mpfr_compat.c  reuse.c  rnd_mode.c  tabs.c  tacos.c  tacosh.c  tadd.c  tadd1sp.c  tadd_d.c  tadd_ui.c  tagm.c  tasin.c  tasinh.c  tatan.c  tatanh.c  tcan_round.c  tcbrt.c  tcheck.c  tcmp.c  tcmp2.c  tcmp_d.c  tcmp_ld.c  tcmp_ui.c  tcmpabs.c  tcomparisons.c  tconst_catalan.c  tconst_euler.c  tconst_log2.c  tconst_pi.c  tcopysign.c  tcos.c  tcosh.c  tcot.c  (+118 more)
m3-win/: vcredist.txt
scratch/: bitfield.c  macosx-vmmap.cpp  make-bitfield
scripts/: .cvsignore  .gitignore  7z.exclude  Documentation_cm3Proj.htm  PKGS  PkgTags  README  README-WIN32  README-build-unicode  all-deps  archive-pkg.sh  backup-pkgs.sh  boot-cm3-build-on-target.sh  boot-cm3-core.sh  boot-cm3-makefile-lib.tmpl  boot-cm3-makefile-prog.tmpl  boot-cm3-with-m3.sh  boot2.sh  bootstrap.cmake  branch.quake  build-cross-backend.sh  cm3-pkg-deps  cm3Proj.cmd  cm3SetupCmdEnv.cmd  cm3StartIDE.CMD  concierge.py  config.c  copy-bootarchives.sh  create-skel.sh  def-std-pkgs.sh  do-cm3-all.sh  do-cm3-base.cmd  do-cm3-base.sh  do-cm3-caltech-parser.sh  do-cm3-coll.sh  do-cm3-comm.sh  do-cm3-core.cmd  do-cm3-core.sh  do-cm3-front.sh  do-cm3-gui.sh  (+49 more)
style/: PkgTags  normal.css
tools/: PkgTags
www/: ANNOUNCE_5_4_0  Makefile  OUTDATED.html  PkgTags  RELNOTES_5_2_0  RELNOTES_5_2_4  RELNOTES_5_2_6  RELNOTES_5_4_0  about-cm3.html  archive.cksum  archive.list  archive.md5  booting.html  checksums.html  checksums.php3  cm3-5.1.8-details.txt  cm3-5.4-status.html  cm3-and-elego.html  cm3-cm-rules.html  cm3-problem-report.html  cm3-src-std-contents.html  cvs-cm3.html  cvsup-cm3.html  cvsupfile.cm3  download.html  index-old.html  index.html  install-cm3-on-ubuntu-7-10.html  installation-windows.html  installation.html  known-problems-old.html  known-problems.html  linking.html  m3-boot-diffs  mailing-lists.html  nav-doc.html  nav-home.html  nav-inst.html  nav-rsrc.html  nav-stat.html  (+18 more)
(+29733 files in other folders)
